--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DiabetesApp"
         tools:targetApi="31">
+
+        <activity
+            android:name=".BarcodeScannerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.DiabetesApp" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+
             android:theme="@style/Theme.DiabetesApp">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
